--- a/app/css/PostCard.css
+++ b/app/css/PostCard.css
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: flex-end;
     width: 100%;
-    gap: 30px;
+    gap: 40px;
     min-height: 100vh
 
 }
